# 202223_humanoid_project

./: ReadMe.md
CAD/Arms-Final Design/Purchased Components/: 12mm M4 Bracket.SLDPRT  3mm Bearing.SLDPRT  5mm Bearing.SLDPRT  6mm Bearing.SLDPRT  9mm Bearing.SLDPRT  Compression Spring.SLDPRT  M3x10.SLDPRT  M4 Nut.SLDPRT  M4x30.SLDPRT  M5x25.SLDPRT  Torsion Spring.SLDPRT
CAD/Arms-Final Design/SLDWRKS/: Forearm Assembly B.SLDASM  Forearm Assembly F.SLDASM  Planetary Gearbox-Annulus.SLDPRT  Planetary Gearbox-Carrier Roll.SLDPRT  Planetary Gearbox-Carrier Yaw.SLDPRT  Planetary Gearbox-Lid.SLDPRT  Planetary Gearbox-Planet.SLDPRT  Planetary Gearbox-Sun.SLDPRT  Pulley-1DOF Fixed.SLDPRT  Pulley-5mm ID.SLDPRT  Pulley-5mm Spacer.SLDPRT  Pulley-9mm Spacer.SLDPRT  Pulley-9mm.SLDPRT  Pulley-Pretensioner Bracket SLA.SLDPRT  Pulley-Pretensioner Hoop.SLDPRT  Pulley-Pretensioner Pawl SLA.SLDPRT  Pulley-Pretensioner Ratchet SLA.SLDPRT  Pulley-Sheave SLA.SLDPRT  Skeleton-Forearm Back.SLDPRT  Skeleton-Forearm Connecting Bone.SLDPRT  Skeleton-Forearm Front.SLDPRT  Skeleton-Shoulder Connecting Bar.SLDPRT  Wrist Assembly.SLDASM  (+14 more)
Electrical circuit/humanoid circuit KiCAD/: A1 motor.kicad_sch  NOC.kicad_sch  Software structure  USB dock.kicad_sch  USB to RS485.kicad_sch  humanoid circuit.kicad_prl  humanoid circuit.kicad_pro  humanoid circuit.kicad_sch
Humanoid Robot Leg Design/: Humanoid_Robot_Leg_Design_Final - Ankle Belt.stl  Humanoid_Robot_Leg_Design_Final - Ankle Joint Pulley.stl  Humanoid_Robot_Leg_Design_Final - Ankle Motor Pulley.stl  Humanoid_Robot_Leg_Design_Final - Ankle Nob.stl  Humanoid_Robot_Leg_Design_Final - Ankle Pin.stl  Humanoid_Robot_Leg_Design_Final - Ankle Pulley Pin.stl  Humanoid_Robot_Leg_Design_Final - Bolts.stl  Humanoid_Robot_Leg_Design_Final - Hip Frame Back.stl  Humanoid_Robot_Leg_Design_Final - Hip Frame Front.stl  Humanoid_Robot_Leg_Design_Final - Hip Frame Motors.stl  Humanoid_Robot_Leg_Design_Final - Hip Frame Top.stl  Humanoid_Robot_Leg_Design_Final - Hip Yaw Motor Wheel.stl  Humanoid_Robot_Leg_Design_Final - Knee Belt.stl  Humanoid_Robot_Leg_Design_Final - Knee Motor Pulley.stl  Humanoid_Robot_Leg_Design_Final - Knee Pin Left.stl  Humanoid_Robot_Leg_Design_Final - Knee Pin.stl  Humanoid_Robot_Leg_Design_Final - Knee Pulley.stl  Humanoid_Robot_Leg_Design_Final - Knee to Ankle Pulley.stl  Humanoid_Robot_Leg_Design_Final - Lower Leg Frame Front.stl  Humanoid_Robot_Leg_Design_Final - Lower Leg Frame Sides.stl  Humanoid_Robot_Leg_Design_Final - Motor Bolts.stl  Humanoid_Robot_Leg_Design_Final - Motor Screws.stl  Humanoid_Robot_Leg_Design_Final - Nuts.stl  Humanoid_Robot_Leg_Design_Final - Thigh Frame.stl  Humanoid_Robot_Leg_Design_Final - Thigh Motor Frame.stl  Humanoid_Robot_Leg_Design_Final - Upper Leg Plate.stl
Low-level control code/: CMakeLists.txt  ReadMe.md
Low-level control code/include/ActuationSystem/: ActuationSystem.h
Low-level control code/include/CSVGenerator/: CSVGenerator.h
Low-level control code/include/Motor/: Motor.h  PIDcontroller.h
Low-level control code/include/MotorGroup/: MotorGroup.h  temp
Low-level control code/include/serialPort/: SerialPort.h
Low-level control code/include/unitreeMotor/: unitreeMotor.h
Low-level control code/include/unitreeMotor/include/: motor_msg.h
Low-level control code/src/: changeID.cpp  motor_control.cpp
Low-level control code/src/development code/: test_motor (Chris'es velocity control).cpp  test_motor (code for demo with 4 motors).cpp  test_motor (code used for stall torque testing).cpp  test_motor (code used for velocity test).cpp  test_motor (correlaction of K_W to torque).cpp  test_motor (damping mode).cpp  test_motor (encoder test).cpp  test_motor (first working PID to be calibrated).cpp  test_motor (max speed with PSU).cpp  test_motor (original_different_values).cpp  test_motor (trial of running 4 motors on two lines).cpp  test_motor (very small desired torque).cpp  test_motor (working PID controller with csv generator).cpp
Motor Test Results/: A1 motor testing RA.docx  Result analysis.docx  Timing analysis of low level control software.docx
Motor Test Results/Encoder testing/: encoder test.xlsx
Motor Test Results/PID controller tunning/: KP=1.440000 KI=0.000000 KD=0.040000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=0.000000 KD=0.045000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=12.430000 KD=0.035000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=16.570000 KD=0.030000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=20.719000 KD=0.025000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=4.144000 KD=0.035000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=1.440000 KI=4.144000 KD=0.040000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv  KP=2.400000 KI=0.000000 KD=0.000000 f[Hz]=1000.000000 T_limit[Nm]=33.500000.csv
WBC and Simulation/: readme
WBC and Simulation/install/: local_setup.sh  setup.sh
WBC and Simulation/src/yamlutils/: CMakeLists.txt  Config.cmake.in  readme.md
WBC and Simulation/src/yamlutils/tests/: gtest_main.cpp  test_yaml_eigen.cpp  test_yaml_tools.cpp
(+204 files in other folders)
